--- a/index.html
+++ b/index.html
@@ -1,30 +1,20 @@
-<p class="warning">Don't divide by zero</p>
+<p class="codepen" data-height="265" data-theme-id="light" data-default-tab="html,result" data-user="giana" data-slug-hash="GJMBEv" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="JavaScript calculator">
+  <span>See the Pen <a href="https://codepen.io/giana/pen/GJMBEv">
+  JavaScript calculator</a> by Giana (<a href="https://codepen.io/giana">@giana</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
-<div id="calculator" class="calculator">
+<p class="codepen" data-height="265" data-theme-id="light" data-default-tab="css,result" data-user="giana" data-slug-hash="GJMBEv" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="JavaScript calculator">
+  <span>See the Pen <a href="https://codepen.io/giana/pen/GJMBEv">
+  JavaScript calculator</a> by Giana (<a href="https://codepen.io/giana">@giana</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
 
-  <button id="clear" class="clear">C</button>
-
-  <div id="viewer" class="viewer">0</div>
-
-  <button class="num" data-num="7">7</button>
-  <button class="num" data-num="8">8</button>
-  <button class="num" data-num="9">9</button>
-  <button data-ops="plus" class="ops">+</button>
-
-  <button class="num" data-num="4">4</button>
-  <button class="num" data-num="5">5</button>
-  <button class="num" data-num="6">6</button>
-  <button data-ops="minus" class="ops">-</button>
-
-  <button class="num" data-num="1">1</button>
-  <button class="num" data-num="2">2</button>
-  <button class="num" data-num="3">3</button>
-  <button data-ops="times" class="ops">*</button>
-
-  <button class="num" data-num="0">0</button>
-  <button class="num" data-num=".">.</button>
-  <button id="equals" class="equals" data-result="">=</button>
-  <button data-ops="divided by" class="ops">/</button>
-</div>
-
-<button id="reset" class="reset">Reset Universe?</button>
+<p class="codepen" data-height="265" data-theme-id="light" data-default-tab="js,result" data-user="giana" data-slug-hash="GJMBEv" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="JavaScript calculator">
+  <span>See the Pen <a href="https://codepen.io/giana/pen/GJMBEv">
+  JavaScript calculator</a> by Giana (<a href="https://codepen.io/giana">@giana</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
